fix stretched logos in app

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -176,6 +176,15 @@ h3 {
 //    text-decoration: none;
 //  }
 //}
+#logo{
+  width: auto;
+  height: auto
+}
+
+.user-logo-image{
+  width: 100%;
+  height: auto;
+}
 
 /* footer */
 
